minor tweaks and rearrangements

--- a/.gitignore
+++ b/.gitignore
@@ -8,32 +8,11 @@ syntax: glob
 *.elc
 /.recentf
 elispcache/*
-.emacs.d/var/pcache/*
-.emacs.d/eproject.lst
-.emacs.d/url
-.emacs.d/scratch.el
-.emacs.d/tramp
-.emacs.d/kill-ring-saved.el
-.emacs.d/eshell/lastdir
 */CVS/*
 CVS
 .svn
 .bzr
 .git
-.emacs.d/history
-.emacs.d/el-get/*/.git
-.emacs.d/el-get/.loaddefs.el*
-.emacs.d/el-get/.status.el*
-.emacs.d/thumbs
-.org-id-locations
-org-clock-save.el
-ac-comphist.dat
-.emacs.d/nxhtml/etc/schema/xhtml-loader.rnc
-.emacs.d/jabber/elc-temp
-.yaoddmuse
-.emacs.d/yatex1.74.4/lp.el
-.emacs.d/emacs-w3m/autom4te.cache/
-.emacs.d/php-doc
 .emacs.d/cedet-1.0/cogre/cogre-loaddefs.el
 .emacs.d/cedet-1.0/common/cedet-loaddefs.el
 .emacs.d/cedet-1.0/contrib/contrib-loaddefs.el
@@ -43,8 +22,31 @@ ac-comphist.dat
 .emacs.d/cedet-1.0/speedbar/speedbar-loaddefs.el
 .emacs.d/cedet-1.0/srecode/srecode-loaddefs.el
 .emacs.d/color-theme/color-theme-autoloads.el
+.emacs.d/el-get/*/.git
+.emacs.d/el-get/.loaddefs.el*
+.emacs.d/el-get/.status.el*
+.emacs.d/el-get/wanderlust/wl/wl-news.el
+.emacs.d/elpa/archives/
+.emacs.d/emacs-w3m/autom4te.cache/
 .emacs.d/emacs-w3m/config.log
 .emacs.d/emacs-w3m/doc/emacs-w3m-ja.info
 .emacs.d/emacs-w3m/w3m-load.el
-.emacs.d/el-get/wanderlust/wl/wl-news.el
+.emacs.d/eproject.lst
+.emacs.d/eshell/
+.emacs.d/eshell/lastdir
+.emacs.d/history
+.emacs.d/jabber/elc-temp
+.emacs.d/kill-ring-saved.el
+.emacs.d/nxhtml/etc/schema/xhtml-loader.rnc
+.emacs.d/php-doc
+.emacs.d/scratch.el
+.emacs.d/thumbs
+.emacs.d/tramp
+.emacs.d/url
+.emacs.d/var/pcache/*
 .emacs.d/wg
+.emacs.d/yatex1.74.4/lp.el
+.org-id-locations
+org-clock-save.el
+ac-comphist.dat
+.yaoddmuse
